@@ -1,3 +1,5 @@
+10-Jul-2016 Fixes #279. The string indexer on C.CModuleContainer, used to identify individual source files (generally for subsequent settings patching), now throws an exception when there is no match for the filename provided.
+
 01-Jul-2016 Fixes #275. Added BuildStartTime property to Bam.Core.ProcessState, as the time that the BAM process was launched. Retrieve this through Bam.Core.Graph.Instance.ProcessState.BuildStartTime. This is intended as a potentially useful piece of information that can be used alongside IProductDefinition.
 
 01-Jul-2016 Fixes #278. VisualCCommon conversions of the C.ICommonLinkerSettings now honours the Bits property, converting it to the MACHINE linker option (both command lines and .vcxproject settings).
